[gd_scene load_steps=22 format=3 uid="uid://ctj3k63qbjku"]

[ext_resource type="Script" path="res://game.gd" id="1_bamb0"]
[ext_resource type="PackedScene" uid="uid://dle7ccr76jp26" path="res://player.tscn" id="1_ym5bf"]
[ext_resource type="Texture2D" uid="uid://umglauc5rebc" path="res://assets/UI_Sprites/Button/Menu_Button.png" id="2_cmmel"]
[ext_resource type="Texture2D" uid="uid://c8xx70c77p1nx" path="res://assets/UI_Sprites/Button/Button_pressed.png" id="3_8ssqm"]
[ext_resource type="Texture2D" uid="uid://54166xehivmj" path="res://assets/UI_Sprites/Button/Button_Focus.png" id="4_eb2np"]
[ext_resource type="Texture2D" uid="uid://cmv8jfi4xf05g" path="res://assets/UI_Sprites/XPBar/XP-Bottom.png" id="6_lf43h"]
[ext_resource type="FontFile" uid="uid://clvfhgb14oc1w" path="res://assets/Fonts/Gamepixies-XGDzg.ttf" id="6_nn0oi"]
[ext_resource type="Texture2D" uid="uid://cayy43y0t4dnr" path="res://assets/UI_Sprites/XPBar/XP-Midbar.png" id="7_i167d"]
[ext_resource type="Texture2D" uid="uid://2wjv2m17pxjg" path="res://assets/UI_Sprites/CharacterDisplay/CharacterDisplay.png" id="8_f80o3"]
[ext_resource type="Script" path="res://resume_button.gd" id="8_qki08"]
[ext_resource type="PackedScene" uid="uid://cfqo80c6r6a8r" path="res://characters/old_man/old_man.tscn" id="10_luns8"]
[ext_resource type="Texture2D" uid="uid://bvs767rts03sv" path="res://assets/UI_Sprites/PauseMenu/PauseMenu.png" id="12_7c04e"]
[ext_resource type="PackedScene" uid="uid://dmxkuoih4uc1n" path="res://Enemies/Evil_Pizza/Evil_Pizza.tscn" id="12_jmief"]
[ext_resource type="PackedScene" uid="uid://dw4t4shc4gyjl" path="res://Utility/enemy_spawner.tscn" id="12_kt2t7"]
[ext_resource type="Texture2D" uid="uid://dmylil0yv2jxm" path="res://DesignWork/Gameprojekt/Export/Button_pressed.png" id="13_3nlbj"]
[ext_resource type="Script" path="res://Utility/spawn_info.gd" id="13_sgraj"]

[sub_resource type="Theme" id="Theme_uq34s"]

[sub_resource type="GDScript" id="GDScript_hw6ru"]
script/source = "extends ColorRect

func _on_restart_button_pressed() -> void:
	get_tree().paused = false
	get_tree().reload_current_scene()

func _on_main_menu_button_pressed() -> void:
	get_tree().paused = false
	get_tree().change_scene_to_file(\"res://scenes/MainMenu/Menu.tscn\")
"

[sub_resource type="GDScript" id="GDScript_655d2"]

[sub_resource type="Theme" id="Theme_jqb0v"]

[sub_resource type="Resource" id="Resource_27w51"]
script = ExtResource("13_sgraj")
time_start = 0
time_end = 15000000
enemy = ExtResource("12_jmief")
enemy_num = 1
enemy_spawn_delay = 3

[node name="Game" type="Node2D" groups=["Game"]]
process_mode = 1
y_sort_enabled = true
script = ExtResource("1_bamb0")

[node name="MapComplete" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="ColorRect" type="ColorRect" parent="MapComplete"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.384314, 0.384314, 0.384314, 0.568627)

[node name="HBoxContainer" type="HBoxContainer" parent="MapComplete/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -248.0
offset_top = 53.0
offset_right = 237.0
offset_bottom = 148.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100

[node name="Map1" type="TextureButton" parent="MapComplete/ColorRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_uq34s")
texture_normal = ExtResource("2_cmmel")
texture_pressed = ExtResource("3_8ssqm")
texture_focused = ExtResource("4_eb2np")
stretch_mode = 0

[node name="Map1Label" type="Label" parent="MapComplete/ColorRect/HBoxContainer/Map1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.5
offset_top = -13.0
offset_right = 4.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2

[node name="Map2" type="TextureButton" parent="MapComplete/ColorRect/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture_normal = ExtResource("2_cmmel")
texture_pressed = ExtResource("3_8ssqm")
texture_focused = ExtResource("4_eb2np")
stretch_mode = 0

[node name="Map2Label" type="Label" parent="MapComplete/ColorRect/HBoxContainer/Map2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -4.5
offset_top = -13.0
offset_right = 4.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2

[node name="MobDeathCount" type="Label" parent="MapComplete/ColorRect"]
unique_name_in_owner = true
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_font_sizes/font_size = 24
text = "Mobs Defeated: 0"
horizontal_alignment = 1

[node name="Label" type="Label" parent="MapComplete"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -112.0
offset_top = 54.0
offset_right = 110.0
offset_bottom = 104.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 30
text = "Map Complete!"

[node name="Player" parent="." instance=ExtResource("1_ym5bf")]
position = Vector2(344, 183)
scale = Vector2(1.351, 1)

[node name="CharacterInfo" type="CanvasLayer" parent="."]
unique_name_in_owner = true
layer = 2

[node name="ImageInfo" type="TextureRect" parent="CharacterInfo"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 4.0
offset_top = -67.0
offset_right = 164.0
offset_bottom = -3.0
grow_vertical = 0
texture = ExtResource("8_f80o3")

[node name="Countdown" type="Label" parent="CharacterInfo/ImageInfo"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4375
anchor_top = 4.75
anchor_right = 2.39375
anchor_bottom = 7.10938
offset_top = -296.0
offset_right = 29.0
offset_bottom = -278.0
scale = Vector2(0.1, 0.1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("6_nn0oi")
theme_override_font_sizes/font_size = 160
text = "2:00
"
metadata/_edit_use_anchors_ = true

[node name="Score" type="Label" parent="CharacterInfo/ImageInfo"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 60.0
offset_top = -23.0
offset_right = 251.0
offset_bottom = 286.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.05, 0.05)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("6_nn0oi")
theme_override_font_sizes/font_size = 300
text = "0"

[node name="ExperienceBar" type="TextureProgressBar" parent="CharacterInfo/ImageInfo"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 1
anchors_preset = -1
anchor_right = 0.5
offset_left = 67.0
offset_top = 48.0
offset_right = 74.0
offset_bottom = 57.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
nine_patch_stretch = true
texture_under = ExtResource("6_lf43h")
texture_progress = ExtResource("7_i167d")

[node name="Old_man" parent="CharacterInfo/ImageInfo" instance=ExtResource("10_luns8")]
position = Vector2(28, 15)

[node name="Timer4Countdown" type="Timer" parent="."]
autostart = true

[node name="GameOver" type="CanvasLayer" parent="."]
unique_name_in_owner = true
process_mode = 3
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOver"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -56.0
offset_top = -21.0
offset_right = 14.0
offset_bottom = 47.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.607843)
script = SubResource("GDScript_hw6ru")

[node name="Label" type="Label" parent="GameOver/ColorRect"]
layout_mode = 0
offset_left = 166.0
offset_top = 33.0
offset_right = 7530.0
offset_bottom = 1407.0
scale = Vector2(0.05, 0.05)
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_fonts/font = ExtResource("6_nn0oi")
theme_override_font_sizes/font_size = 1000
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="GameOver/ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -168.0
offset_top = -49.0
offset_right = 154.0
offset_bottom = 129.0
grow_horizontal = 2
grow_vertical = 2

[node name="RestartButton" type="TextureButton" parent="GameOver/ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("2_cmmel")
texture_pressed = ExtResource("13_3nlbj")
texture_hover = ExtResource("13_3nlbj")
texture_focused = ExtResource("13_3nlbj")
stretch_mode = 4
script = SubResource("GDScript_655d2")

[node name="Label" type="Label" parent="GameOver/ColorRect/VBoxContainer/RestartButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -33.0
offset_top = -9.0
offset_right = 1280.0
offset_bottom = 366.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.05, 0.05)
theme_override_fonts/font = ExtResource("6_nn0oi")
theme_override_font_sizes/font_size = 366
text = "Restart"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainMenuButton" type="TextureButton" parent="GameOver/ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 4
texture_normal = ExtResource("2_cmmel")
texture_pressed = ExtResource("3_8ssqm")
texture_hover = ExtResource("13_3nlbj")
texture_focused = ExtResource("13_3nlbj")
stretch_mode = 4

[node name="Label2" type="Label" parent="GameOver/ColorRect/VBoxContainer/MainMenuButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -9.0
offset_right = 815.0
offset_bottom = 366.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.05, 0.05)
theme_override_fonts/font = ExtResource("6_nn0oi")
theme_override_font_sizes/font_size = 366
text = "Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PauseMenu" type="CanvasLayer" parent="."]
unique_name_in_owner = true
process_mode = 3

[node name="ColorRect2" type="ColorRect" parent="PauseMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.494118)

[node name="ColorRect" type="TextureRect" parent="PauseMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("12_7c04e")

[node name="Label" type="Label" parent="PauseMenu"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.0
offset_top = 24.0
offset_right = 1231.0
offset_bottom = 433.0
grow_horizontal = 2
scale = Vector2(0.1, 0.1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 20
theme_override_constants/shadow_outline_size = 100
theme_override_fonts/font = ExtResource("6_nn0oi")
theme_override_font_sizes/font_size = 400
text = "Paused"

[node name="HBoxContainer" type="TextureRect" parent="PauseMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 76.0
offset_bottom = -44.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu/HBoxContainer"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 16.0
offset_top = -101.0
offset_right = 144.0
offset_bottom = 99.0
grow_vertical = 2
theme_override_constants/separation = 0

[node name="ResumeButton" type="TextureButton" parent="PauseMenu/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_bottom = NodePath("../SettingsButton")
theme = SubResource("Theme_jqb0v")
texture_normal = ExtResource("2_cmmel")
texture_pressed = ExtResource("3_8ssqm")
texture_hover = ExtResource("13_3nlbj")
texture_focused = ExtResource("13_3nlbj")
stretch_mode = 0
script = ExtResource("8_qki08")

[node name="Label" type="Label" parent="PauseMenu/HBoxContainer/VBoxContainer/ResumeButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.5
offset_top = -12.0
offset_right = 647.5
offset_bottom = 197.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.1, 0.1)
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("6_nn0oi")
theme_override_font_sizes/font_size = 200
text = "Resume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SettingsButton" type="TextureButton" parent="PauseMenu/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("2_cmmel")
texture_pressed = ExtResource("13_3nlbj")
texture_hover = ExtResource("13_3nlbj")
texture_focused = ExtResource("13_3nlbj")
stretch_mode = 0

[node name="Label" type="Label" parent="PauseMenu/HBoxContainer/VBoxContainer/SettingsButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -38.5
offset_top = -12.0
offset_right = 716.5
offset_bottom = 197.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.1, 0.1)
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("6_nn0oi")
theme_override_font_sizes/font_size = 200
text = "Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MainMenuButton" type="TextureButton" parent="PauseMenu/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_vertical = 3
texture_normal = ExtResource("2_cmmel")
texture_pressed = ExtResource("13_3nlbj")
texture_hover = ExtResource("13_3nlbj")
texture_focused = ExtResource("13_3nlbj")
stretch_mode = 0

[node name="Label" type="Label" parent="PauseMenu/HBoxContainer/VBoxContainer/MainMenuButton"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.496
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -22.5
offset_top = -8.04001
offset_right = 437.5
offset_bottom = 200.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.1, 0.1)
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 2
theme_override_constants/shadow_offset_y = 2
theme_override_fonts/font = ExtResource("6_nn0oi")
theme_override_font_sizes/font_size = 200
text = "Menu"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer2" type="TextureRect" parent="PauseMenu/HBoxContainer"]
layout_mode = 2
offset_left = 149.0
offset_right = 298.0
offset_bottom = 288.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer3" type="TextureRect" parent="PauseMenu/HBoxContainer"]
layout_mode = 2
offset_left = 319.0
offset_right = 469.0
offset_bottom = 288.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer5" type="TextureRect" parent="PauseMenu/HBoxContainer"]
layout_mode = 2
offset_left = 490.0
offset_right = 640.0
offset_bottom = 288.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Spawnpoint" type="Node2D" parent="."]
position = Vector2(693, 399)

[node name="EnemySpawner" parent="." instance=ExtResource("12_kt2t7")]
spawns = Array[ExtResource("13_sgraj")]([SubResource("Resource_27w51")])

[connection signal="pressed" from="MapComplete/ColorRect/HBoxContainer/Map1" to="." method="_on_map_1_pressed"]
[connection signal="pressed" from="MapComplete/ColorRect/HBoxContainer/Map2" to="." method="_on_map_2_pressed"]
[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="level_up" from="Player" to="." method="_on_player_level_up"]
[connection signal="timeout" from="Timer4Countdown" to="." method="_on_timer_4_countdown_timeout"]
[connection signal="pressed" from="GameOver/ColorRect/VBoxContainer/RestartButton" to="GameOver/ColorRect" method="_on_restart_button_pressed"]
[connection signal="pressed" from="GameOver/ColorRect/VBoxContainer/MainMenuButton" to="GameOver/ColorRect" method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="PauseMenu/HBoxContainer/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseMenu/HBoxContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="PauseMenu/HBoxContainer/VBoxContainer/MainMenuButton" to="." method="_on_pause_menu_pressed"]
