[gd_scene load_steps=12 format=3 uid="uid://c5vuxk0aa76sk"]

[ext_resource type="Script" path="res://game.gd" id="1_bamb0"]
[ext_resource type="PackedScene" uid="uid://dle7ccr76jp26" path="res://player.tscn" id="1_ym5bf"]
[ext_resource type="PackedScene" uid="uid://djvajkprc45io" path="res://orb.tscn" id="2_50716"]
[ext_resource type="PackedScene" uid="uid://b6gxhols5xtd3" path="res://pine_tree.tscn" id="2_f2uyu"]
[ext_resource type="FontFile" uid="uid://bkbhtbio65dg5" path="res://PUBLIC/GrapeSoda.ttf" id="2_ygrgo"]
[ext_resource type="PackedScene" uid="uid://u3rad5eu5c4m" path="res://mob.tscn" id="4_m0sop"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_normal"]
bg_color = Color(0.12549, 0.12549, 0.12549, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hover"]
bg_color = Color(0.2, 0.2, 0.2, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 1, 1, 1)
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pressed"]
bg_color = Color(0.133333, 0.133333, 0.133333, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(0.6, 0.6, 0.6, 1)
anti_aliasing = false

[sub_resource type="Curve2D" id="Curve2D_k0e6r"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, -248, -246, 0, 0, 0, 0, -236, 1206, 0, 0, 0, 0, 2232, 1230, 0, 0, 0, 0, 2220, -242, 0, 0, 0, 0, -252, -242)
}
point_count = 5

[node name="ForestMap" type="Node2D"]
process_mode = 1
y_sort_enabled = true
script = ExtResource("1_bamb0")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_left = -75.0
offset_top = -30.0
offset_right = 1929.0
offset_bottom = 1137.0
scale = Vector2(1.07425, 0.944656)
color = Color(0.0784314, 0.219608, 0.0784314, 1)

[node name="Score" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -36.5
offset_right = 36.5
offset_bottom = 172.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_ygrgo")
theme_override_font_sizes/font_size = 126
text = "0"

[node name="TimeLeft" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
offset_left = 20.0
offset_top = 20.0
offset_right = 220.0
offset_bottom = 80.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_ygrgo")
theme_override_font_sizes/font_size = 48
text = "2:00"

[node name="GameTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 120.0
one_shot = true
autostart = true

[node name="Player" parent="." instance=ExtResource("1_ym5bf")]
position = Vector2(940, 524)

[node name="Path2D" type="Path2D" parent="Player"]
position = Vector2(-940, -524)
curve = SubResource("Curve2D_k0e6r")

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
unique_name_in_owner = true
position = Vector2(-248, -246)
rotation = 1.56253

# Forest Layout - Dense tree arrangement
[node name="PineTree" parent="." instance=ExtResource("2_f2uyu")]
position = Vector2(430, 835)

[node name="PineTree2" parent="." instance=ExtResource("2_f2uyu")]
position = Vector2(922, 670)

[node name="PineTree3" parent="." instance=ExtResource("2_f2uyu")]
position = Vector2(370, 257)

[node name="PineTree4" parent="." instance=ExtResource("2_f2uyu")]
position = Vector2(1384, 265)

[node name="PineTree5" parent="." instance=ExtResource("2_f2uyu")]
position = Vector2(1316, 298)

[node name="PineTree6" parent="." instance=ExtResource("2_f2uyu")]
position = Vector2(1288, 264)

[node name="PineTree7" parent="." instance=ExtResource("2_f2uyu")]
position = Vector2(200, 500)

[node name="PineTree8" parent="." instance=ExtResource("2_f2uyu")]
position = Vector2(1600, 500)

[node name="PineTree9" parent="." instance=ExtResource("2_f2uyu")]
position = Vector2(800, 200)

[node name="PineTree10" parent="." instance=ExtResource("2_f2uyu")]
position = Vector2(1100, 800)

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="Mob" parent="." instance=ExtResource("4_m0sop")]

[node name="Orb" parent="." instance=ExtResource("2_50716")]
position = Vector2(660, 489)

# Include all the UI layers (GameOver, PauseMenu, MapComplete) from the main game scene
// ... copy all UI layers from game.tscn ...

[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
[connection signal="health_depleted" from="Player" to="." method="_on_player_health_depleted"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="mob_death" from="Mob" to="." method="_on_mob_mob_death"] 